# nostr-signer

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
src/cli/: io.rs  mod.rs
