[package]
name = "nostr-signer"
version = "0.1.0"
edition = "2021"
description = "Nostr Connect CLI Signer"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/rust-nostr/nostr-signer"
repository = "https://github.com/rust-nostr/nostr-signer.git"
license = "MIT"
readme = "README.md"
keywords = ["nostr", "sdk", "cli"]

[dependencies]
dialoguer = "0.10"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "42b1359ff69d0b8ab76261e83237d7eec802faf4", default-features = false, features = ["nip19", "nip26", "nip46"] }
tokio = { version = "1", features = ["full"] }